add remaining java opts, add debugging on docker info and improve readme